--- a/src/main/resources/templates/fragments/pages/rules/rulebook_quickplay.html
+++ b/src/main/resources/templates/fragments/pages/rules/rulebook_quickplay.html
@@ -207,9 +207,7 @@
 
 </div>
 <script type="text/javascript">
-	window.onload = (event) => {
-	  window.print();
-	};
+	<script type="text/javascript" th:src="@{/js/lw/util/printPage.js}"></script>
 </script>
 </body>
 </html>
