--- a/src/main/resources/templates/fragments/pages/rules/rulebook_scenarios_basic.html
+++ b/src/main/resources/templates/fragments/pages/rules/rulebook_scenarios_basic.html
@@ -245,8 +245,6 @@
     </div>  
 </body>
 <script type="text/javascript">
-	window.onload = (event) => {
-	  window.print();
-	};
+	<script type="text/javascript" th:src="@{/js/lw/util/printPage.js}"></script>
 </script>
 </html>
