--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -3,7 +3,7 @@
 */
 
 @media print {
-    .pagebreak { page-break-before: always; } /* page-break-after works, as well */
+    .pagebreak { page-break-after: always; } /* page-break-after works, as well */
 }
 
 .row-fill-16px{
@@ -82,6 +82,20 @@
     Page: UnitBuilder
         + tagWindow
 */
+.btn-tag-row{
+  background-color: transparent; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+  background-image: url("ui-icons_ffffff_512x480.png");
+  width: 100%;
+  min-width: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+
 #tagWindow{
     background-color: lightgrey;
     opacity:  100%;
@@ -198,345 +212,6 @@
 .list-clean > li{
     margin-bottom: 5px;
 }
-
-/*
-    Unit card Print
-*/
-.uic-main{
-    min-width: 750px;
-    max-width: 750px;
-    width: 750px;
-
-    min-height: 1050px;
-    max-height: 1050px;
-    height: 1050px;
-}
-
-
-/*
-    Unit card Print - small / preview scale
-*/
-
-.uic-card-table{
-    width: 100%;
-}
-
-.uic-keyword-word{
-    font-size: small;
-    font-weight: 500;
-    line-height: 24px;
-    padding-inline-start: 20px;
-}
-
-.uic-keyword-word-sm{
-    position: inherit;
-    left: -10%;
-    font-size: xx-small;
-    font-weight: 500;
-    line-height: 12px;
-    padding-inline-start: 10px;
-}
-
-.uic-main-sm{
-    min-width: 315px;
-    max-width: 315px;
-    width: 315px;
-
-    min-height: 225px;
-    max-height: 225px;
-    height: 225px;
-
-    background-image: url("../img/unitcard_work_r1.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    break-inside: avoid;
-}
-
-.uic-main{
-    min-width: 1050px;
-    max-width: 1050px;
-    width: 1050px;
-
-    min-height: 750px;
-    max-height: 750px;
-    height: 750px;
-    
-    background-image: url("../img/unitcard_work_r1.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    break-inside: avoid;
-    float:left;
-}
-
-.uic-main > div, .uic-main-sm > div{
-    float: left;
-}
-.uic-header-row{
-    position: relative;
-    top: 1%;
-    left: 1%;
-    
-    min-width: 99%;
-    max-width: 99%;
-    width: 99%;
-
-    min-height: 15%;
-    max-height: 15%;
-    height: 15%;
-    display: inline-block;
-}
-
-.uic-header-row-sm{
-    position: relative;
-    top: 0.5%;
-    left: 1%;
-    
-    min-width: 99%;
-    max-width: 99%;
-    width: 99%;
-
-    min-height: 15%;
-    max-height: 15%;
-    height: 15%;
-    float: left;
-}
-
-.uic-stat-row-label{
-    position: relative;
-    min-width: 90%;
-    max-width: 90%;
-    width: 90%;
-
-    min-height: 20%;
-    max-height: 20%;
-    height: 20%;
-
-    text-align: center;
-    display: inline-block;
-}
-
-.uic-stat-row-label-sm{
-    position: relative;
-    min-width: 90%;
-    max-width: 90%;
-    width: 90%;
-
-    min-height: 20%;
-    max-height: 20%;
-    height: 20%;
-
-    text-align: center;
-    display: inline-block;
-}
-
-
-.uic-stat-attack-row{
-    position: relative;    
-    min-width: 50%;
-    max-width: 50%;
-    width: 50%;
-
-    min-height: 10%;
-    max-height: 10%;
-    height: 10%;
-    display: inline-block;
-}
-
-.uic-stat-attack-row-sm{
-    position: relative;    
-    min-width: 50%;
-    max-width: 50%;
-    width: 50%;
-
-    min-height: 10%;
-    max-height: 10%;
-    height: 10%;
-    top: 1%;
-}
-
-
-.uic-tag-row{
-    position: relative;
-
-    top: 4%;
-    left: 0.5%;
-    
-    min-width: 50%;
-    max-width: 50%;
-    width: 50%;
-
-    min-height: 15%;
-    max-height: 15%;
-    height: 15%;
-    display: inline-block;
-}
-
-
-.uic-tag-row-sm{
-    position: relative;
-    
-    top: 1%;
-    left: 5%;
-
-    min-width: 50%;
-    max-width: 50%;
-    width: 50%;
-
-    min-height: 15%;
-    max-height: 15%;
-    height: 15%;
-}
-
-.uic-tag-row > ul {
-    line-height: 1.25;
-}
-
-.uic-tag-row > ul >li{
-    font-size: 2em;
-    font-style: italic;
-}
-
-.uic-tag-row-sm > ul{
-    line-height: 1.1;
-}
-.uic-tag-row-sm > ul > li{
-    font-size: 1.2em;
-    font-style: italic;
-}
-
-
-
-.uic-name{
-    position: inherit;
-    top: 5%;
-    left: 1%;
-    text-align: left;
-    font-size: 2em;
-    min-width: 85%;
-    max-width: 85%;
-    width: 85%;
-    float: left;
-}
-
-.uic-name-sm{
-    position: absolute;
-    left: 1%;
-    text-align: left;
-    font-size: 1em;
-    min-width: 80%;
-    max-width: 80%;
-    width: 80%;
-    min-height: 72%;
-    max-height: 72%;
-    height: 72%;
-    float: left;
-}
-
-
-.uic-points{
-    position: absolute;
-    top: -1%;
-    left: 1%;
-    min-width: 15%;
-    max-width: 15%;
-    width: 15%;
-    
-    height: 80%;
-    min-height: 80%;
-    max-height: 80%;
-
-    font-size: 4em;
-    font-weight: 600;
-    float: left;
-    text-align: center;
-}
-
-.uic-points-sm{
-    position: absolute;
-    left: 85%;
-    top: 15%;
-    min-width: 15%;
-    max-width: 15%;
-    width: 15%;
-    
-    text-align: center;
-
-}
-.uic-points-sm > label{
-    font-size: 3em;
-    font-weight: 600;
-}
-
-
-.uic-stat-row-icon{
-    position: inherit;
-    min-width: 20%;
-    max-width: 20%;
-    width: 20%;
-    
-    min-height: 2em;
-    height: 2em;
-
-    font-size: 3em;
-    text-align: center;
-    float:left;
-}
-
-.uic-stat-row-icon-sm{
-    position: inherit;
-    top: 3%;
-    min-width: 20%;
-    max-width: 20%;
-    width: 20%;
-
-    font-size: 1em;
-    text-align: center;
-    float:left;
-}
-
-.uic-stat-row-icon > label{
-    position: inherit;
-    top: -2%;
-}
-
-.uic-stat-row-icon-sm > label{
-    position: inherit;
-    top: -2%;
-}
-
-#ucSize{
-    left: -12%;
-}
-#ucMove{
-    left: -24%;
-}
-#ucEvade{
-    left: -24%;
-}
-#ucArmor{
-    left: -24%;
-}
-#ucStruc{
-    left: 1%;
-}
-
-
-#ucMel{
-    top: -5%;
-    left: 10%;
-}
-#ucRange{
-    position: relative;
-    left: 120%;
-}
-#ucDist{
-    position: relative;
-    left: 150%;
-}
-#ucTags{
-    
-}
-
 
 /*
     Army Force Builder
