--- a/src/main/resources/templates/fragments/general/navBar.html
+++ b/src/main/resources/templates/fragments/general/navBar.html
@@ -1,13 +1,15 @@
-<div class="grd-row navbar">
-    <div class="grd-row-col-5-6 txt--center">
-        <button id="navHome" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;" >Home</button>
-        <button id="navRulebooks" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Core Rules</button>
-        <button id="navTagRules" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Tag Rules</button>
-        <button id="navUnitBuild" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Unit Editor</button>
-        <button id="navArmyList" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Army List</button>
-        <button id="navCardGen" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Unit Card Gen</button>
-    </div>
-    <div class="grd-row-col-1-6 txt--left">
-		<div class="rulesPanel">TODO USER LOGIN</div>
+<div class="grd navbar">
+	<div class="grd-row ">
+	    <div class="grd-row-col-5-6 txt--center">
+	        <button id="navHome" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;" >Home</button>
+	        <button id="navRulebooks" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Core Rules</button>
+	        <button id="navTagRules" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Tag Rules</button>
+	        <button id="navUnitBuild" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Unit Editor</button>
+	        <button id="navArmyList" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Army List</button>
+	        <button id="navCardGen" type="button" class="btn" style="font-weight: 400px; background-color: #ffffff;">Unit Card Gen</button>
+	    </div>
+	    <div class="grd-row-col-1-6 txt--left">
+			<div class="rulesPanel">TODO USER LOGIN</div>
+		</div>
 	</div>
 </div>
