--- a/src/main/resources/templates/fragments/pages/armyBuilder.html
+++ b/src/main/resources/templates/fragments/pages/armyBuilder.html
@@ -10,40 +10,38 @@ TODO
 
 
 -->
-<div class="grd-row-col-6 txt--center">
-	<div class="grd" hidden=true>
-	    <div class="grd-row">
-	        <div class="grd-row-col-4--sm grd-row-col-4--md grd-row-col-5-lg txt--center">
-	            <h3>Army List Editor</h3>
-	        </div>
-	    </div>
-	    
-	    <div class="grd-row">
-	        <div class="grd-row-col-4--sm grd-row-col-3--md grd-row-col-2--lg">
-	            <p>
-	                This tool will assist in making Army Lists for playing Scenarios in <i>LANDWAR</i>
-	            </p>
-	            <p>
-	                Army Lists are built by loading Unit Data created by the <i>Unit Editor</i> tool, and then
-	                importing them to the Army List Editor.
-	
-	                From there you can select which Units and how many of them to add to your force.
-	
-	                Once satisfied, you can save the list to a new .csv, and/or print out a copy.
-	            </p>
-	            <p>
-	                *<i>.csv</i> files must have been written by the ArmyBuilder tool or formatted to its expected template.
-	            </p>
-	        </div>
-	    </div>
-	    
-	    <div class="grd-row row-fill-s row-fill row-fill-l"></div>
-	    
-	    <div class="grd-row">
-	        <div class="grd-row-col-4-6--sm grd-row-col-3-6--md grd-row-col-2-6--lg">
-	            <button type="button" title="Start a new Army List worksheet." onclick="armb_control_sheet_new();" class="btn--green ui-icon-white"><span class="ui-icon ui-icon-document"></span></button>
-	            <button type="button" title="Open an existing Unit Editor or Army List CSV." onclick="armb_control_sheet_import();" class="btn--blue ui-icon-white"><span class="ui-icon ui-icon-folder-open"></span></button>
-	        </div>
-	    </div>
-	</div>	
-</div>
+<div id="pageArmyBuilder" class="grd txt--center" >
+    <div class="grd-row txt--center">
+        <div class="grd-row-col-4--sm grd-row-col-4--md grd-row-col-5-lg">
+            <h3>Army List Editor</h3>
+        </div>
+    </div>
+    
+    <div class="grd-row txt--left">
+        <div class="grd-row-col-4--sm grd-row-col-3--md grd-row-col-2--lg">
+            <p>
+                This tool will assist in making Army Lists for playing Scenarios in <i>LANDWAR</i>
+            </p>
+            <p>
+                Army Lists are built by loading Unit Data created by the <i>Unit Editor</i> tool, and then
+                importing them to the Army List Editor.
+
+                From there you can select which Units and how many of them to add to your force.
+
+                Once satisfied, you can save the list to a new .csv, and/or print out a copy.
+            </p>
+            <p>
+                *<i>.csv</i> files must have been written by the ArmyBuilder tool or formatted to its expected template.
+            </p>
+        </div>
+    </div>
+    
+    <div class="grd-row row-fill-s row-fill row-fill-l"></div>
+    
+    <div class="grd-row">
+        <div class="grd-row-col-4-6--sm grd-row-col-3-6--md grd-row-col-2-6--lg">
+            <button type="button" title="Start a new Army List worksheet." onclick="armb_control_sheet_new();" class="btn--green ui-icon-white"><span class="ui-icon ui-icon-document"></span></button>
+            <button type="button" title="Open an existing Unit Editor or Army List CSV." onclick="armb_control_sheet_import();" class="btn--blue ui-icon-white"><span class="ui-icon ui-icon-folder-open"></span></button>
+        </div>
+    </div>
+</div>	
