--- a/src/main/resources/templates/fragments/pages/landing.html
+++ b/src/main/resources/templates/fragments/pages/landing.html
@@ -1,28 +1,25 @@
-<div class="grd-row-col-6 txt--center">
-	<div class="grd">
-		<div class="grd-row">
-		    <div class="grd-row-col-6--sm grd-row-col-6--md grd-row-col-6--lg txt--center">
-		        <img src="/img/logo.png" alt="" style="width:695px;height:200.5px;"/>
-		    </div>
-		</div>
-		<div class="grd-row">
-		    <div class="grd-row-col-6--sm grd-row-col-6--md grd-row-col-6--lg txt--center">
-		        <h2><i>Game Development Kit</i></h2>
-		    </div>
-		</div>
-		<div class="grd-row">
-		    <div class="grd-row-col-6--sm grd-row-col-6--md grd-row-col-6--lg txt--center">
-		        <p><i>LANDWAR</i> is primarily a rules-set or framework for tabletop wargaming. This application empowers Players and Game Masters
-		        to acces and utilize the following:</p>
-		        <ul class="list--unstyled">
-		            <li>Core Rules section</li>
-		            <li>TAG library</li>
-		            <li>Generate custom unit cards.</li>
-		            <li>Calculate unit point costs.</li>
-		            <li>Create custom armies.</li>
-		        </ul>
-		    </div>
-		</div>
+<div id="pageLanding" class="grd txt--center">
+	<div class="grd-row">
+	    <div class="grd-row-col-6--sm grd-row-col-6--md grd-row-col-6--lg txt--center">
+	        <img src="/img/logo.png" alt="" style="width:695px;height:200.5px;"/>
+	    </div>
+	</div>
+	<div class="grd-row">
+	    <div class="grd-row-col-6--sm grd-row-col-6--md grd-row-col-6--lg txt--center">
+	        <h2><i>Game Development Kit</i></h2>
+	    </div>
+	</div>
+	<div class="grd-row">
+	    <div class="grd-row-col-6--sm grd-row-col-6--md grd-row-col-6--lg txt--center">
+	        <p><i>LANDWAR</i> is primarily a rules-set or framework for tabletop wargaming. This application empowers Players and Game Masters
+	        to acces and utilize the following:</p>
+	        <ul class="list--unstyled">
+	            <li>Core Rules section</li>
+	            <li>TAG library</li>
+	            <li>Generate custom unit cards.</li>
+	            <li>Calculate unit point costs.</li>
+	            <li>Create custom armies.</li>
+	        </ul>
+	    </div>
 	</div>
 </div>
-
