--- a/src/main/resources/templates/fragments/pages/rules/rulebook_core.html
+++ b/src/main/resources/templates/fragments/pages/rules/rulebook_core.html
@@ -20,6 +20,11 @@
 			     margin-bottom: 0;
 			   }
 			}
+		@media screen {
+			@page{
+				max-width: 1000px;
+			}
+		}
 	</style>
 </head>
 <body>
@@ -650,10 +655,6 @@
             </div>
         </div>
     </div>
-	<script type="text/javascript">
-		window.onload = (event) => {
-		  window.print();
-		};
-	</script>
+	<script type="text/javascript" th:src="@{/js/lw/util/printPage.js}"></script>
 </body>
 </html>
