--- a/src/main/resources/templates/fragments/pages/rules/rulebook_core_unit_cost.html
+++ b/src/main/resources/templates/fragments/pages/rules/rulebook_core_unit_cost.html
@@ -205,10 +205,6 @@
         </div>
     </div>
 </div>
-<script type="text/javascript">
-	window.onload = (event) => {
-	  window.print();
-	};
-</script>
+<script type="text/javascript" th:src="@{/js/lw/util/printPage.js}"></script>
 </body>
 </html>
